Fixed align time

--- a/styles/Pregunta.css
+++ b/styles/Pregunta.css
@@ -126,6 +126,7 @@ li{
     display: flex;
     justify-content: flex-end;
     align-items: center;
+    text-align: center;
 }
 
 .boxTemporizador{
